@@ -89,7 +89,6 @@ function stripslashes_deep($value) {
     return $value;
 }
 
-
 function getBlacklistFilename() {
     global $gallery;
     return sprintf("%s/blacklist.dat", $gallery->app->albumDir);
@@ -1590,12 +1589,17 @@ function calcVAdivDimension($frame, $iHeight, $iWidth, $borderwidth) {
 			$divCellAdd =  $borderwidth +3;
 		break;
                   
-
-		default: // use frames directory
+		default: // use frames directory or fallback to none.
+		    if(array_key_exists($frame, available_frames())) {
 			require(dirname(__FILE__) . "/html_wrap/frames/$frame/frame.def");
                     
 			$divCellWidth = $thumbsize + $widthTL + $widthTR;
 			$divCellAdd = $heightTT + $heightBB;
+		    }
+		    else {
+			$divCellWidth = $thumbsize + 3;
+			$divCellAdd =  3;
+		    }
 		break;
 	} // end of switch
 
